# Noise_Cancellation

./: .gitignore  Noise_Monitor.html  README.md
ai/python/experiments/: benchmark.py  benchmark_compile.py  denoise.py  export_onnx.py  export_to_onnx.py  inspect_onnx_models.py  test.py  verify_onnx.py
ai/python/server/: server.py
ai/rust/: Cargo.toml
ai/rust/src/: main.rs  stream_server.rs  stream_server_vad.rs
cpp/: CMakeLists.txt
cpp/src/: main.cpp  passthrough_test.cpp
docs/: EXPERIMENTS.md  noise_server_report.docx  noise_server_reports.md
engine/: CMakeLists.txt
engine/experiments/: passthrough_sleep_fix.cpp  passthrough_test.cpp
engine/tests/: passthrough_1536.cpp
python/: benchmark.py  generate_noisy.py  requirements.txt  server_async.py
results/: benchmark_inference_mode.txt  benchmark_pytorch_cpu.txt  phase4_cpp_terminal.txt  phase4_python_terminal.txt
results/benchmark/: benchmark_compile.txt
results/experiment/: experiment_rust_cpp.txt  experiment_rust_hearing.txt  experiment_rust_server.txt  experiment_sleep_fix_cpp.txt  experiment_sleep_fix_python.txt  verify_onnx.txt
results/phase4/: phase4_cpp_terminal.txt  phase4_final_cpp.txt  phase4_final_python.txt  phase4_python_terminal.txt
results/phase5/: phase5_cpp_terminal.txt  phase5_rust_terminal.txt
