[package]
name = "noise_server"
version = "0.1.0"
edition = "2021"

# Phase 5 — per-chunk pipeline (reference, do not remove)
[[bin]]
name = "noise_server"
path = "src/main.rs"

# Phase 6 — continuous stream pipeline
[[bin]]
name = "stream_server"
path = "src/stream_server.rs"

# Phase 7 — continuous stream + Voice Activity Detection (current)
[[bin]]
name = "stream_server_vad"
path = "src/stream_server_vad.rs"

[dependencies]
zmq         = "0.10"
ort         = { version = "2.0.0-rc.12" }
deep_filter = "0.2.5"
anyhow      = "1.0"
env_logger  = "0.10"
log         = "0.4"
rubato      = "0.14"
ndarray     = "0.15"
configparser = "2.0"